refactor: Docker noble base, bridge network bootstrap, home-dir paths